--- a/html/scoreboard.html
+++ b/html/scoreboard.html
@@ -15,33 +15,33 @@
 				<p style="color:#5ea1e0;"> 👮🏻 <span id="police">0</span> </p>
 				<p style="color:yellow;"> 🚖 <span id="taxi">0</span> </p>
 				<p style="color:grey;"> 🔧 <span id="mechanic">0</span> </p>
-				<!-- <p style="color:lightblue;"> 🐔 <span id="slaughterer">0</span> </p>
-				<p style="color:red;"> ⛽ <span id="fueler">0</span> </p>
-				<p style="color:green;"> 🌲 <span id="lumberjack">0</span> </p>				
-				<p style="color:lightblue;"> 👚 <span id="tailor">0</span> </p>		 -->
-				<p style="color:lightblue;"> 🎥 <span id="reporter">0</span> </p>						
-				<!-- <p style="color:yellow;"> ⛏️ <span id="miner">0</span> </p> -->
-				<p style="color:#58ce93;"> 🏘️ <span id="estate">0</span> </p>
-				<p style="color:#f8b119;"> 🚗 <span id="cardeal">0</span> </p>
-				<p style="color:#616161;"> 💣 <span id="arma">0</span> </p>
-				<p style="color:rgb(126, 83, 77);"> 💼 <span id="stato">0</span> </p>
-				<p style="color:lightblue;"> 💤 <span id="unemployed">0</span> </p>
+				<!-- <p style="color:lightblue;"> 🐔 <span id="slaughterer">0</span> </p>-->
+				<!-- <p style="color:red;"> ⛽ <span id="fueler">0</span> </p>-->
+				<!-- <p style="color:green;"> 🌲 <span id="lumberjack">0</span> </p>	-->			
+				<!-- <p style="color:lightblue;"> 👚 <span id="tailor">0</span> </p>-->
+				<!-- <p style="color:lightblue;"> 🎥 <span id="reporter">0</span> </p>	-->					
+				<!-- <p style="color:yellow;"> ⛏️ <span id="miner">0</span> </p>-->
+				<!-- <p style="color:#58ce93;"> 🏘️ <span id="estate">0</span> </p>-->
+				<!-- <p style="color:#f8b119;"> 🚗 <span id="cardeal">0</span> </p>-->
+				<!-- <p style="color:#616161;"> 💣 <span id="arma">0</span> </p> -->
+				<p style="color:rgb(126, 83, 77);"> 💼 <span id="justice">0</span> </p>
+				<!-- <p style="color:lightblue;"> 💤 <span id="unemployed">0</span> </p>-->
 			</div>
 		</div>
 
 		<div class="playerlist">
 			<table id="playerlist" width="100%">
 				<tr class="heading">
-					<th>Nome</th>
+					<th>Name</th>
 					<th>ID</th>
 					<th>Ping</th>
-					<th>Nome</th>
+					<th>Name</th>
 					<th>ID</th>
 					<th>Ping</th>
-					<th>Nome</th>
+					<th>Name</th>
 					<th>ID</th>
 					<th>Ping</th>
-					<th>Nome</th>
+					<th>Name</th>
 					<th>ID</th>
 					<th>Ping</th>
 				</tr>
@@ -49,7 +49,7 @@
 		</div>
 
 		<div class="serverinfo">
-			Giocatori: <span id="player_count">0</span> / 128 <span style="font-size: 0.6vw"> | </span>Tempo di gioco: <span id="play_time"></span>
+			Spieler: <span id="player_count">0</span> / 128 <span style="font-size: 0.6vw"> | </span>Spielzeit: <span id="play_time"></span>
 		</div>
 
 	</div>
